# inexactsearch

./: .gitignore  Makefile  README.md  README.rst  __init__.py  inexactsearch.py  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
inexactsearch/: __init__.py  core.py  expose.py  inexactsearch.py
inexactsearch/templates/: inexactsearch.html
inexactsearch/tests/: inexactsearch_test.py
libindic/inexactsearch/: __init__.py
libindic/inexactsearch/templates/: inexactsearch.html  libindic.inexactsearch.html
libindic/inexactsearch/tests/: test_inexactsearch.py
tests/: inexactsearch_test.py  test_inexactsearch.py
