[metadata]
name = inexactsearch
author = SILPA Developers
author-email = silpa-discuss@nongnu.org
summary = Fuzzy String search algorithm using Soundex for Indian language
license = LGPL-2.1+
description-file =
  README.md
home-page = https://github.com/Project-SILPA/inexactsearch
requires-python = >=2.7
classifier =
  Development Status :: 4 - Beta
  License :: DFSG approved
  License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
  Operating System :: OS Independent
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Programming Language :: Python

[files]
namespace_packages = libindic
packages = libindic

[entry_points]
libindic.api.rest = 
    search = inexactsearch.expose:search

[wheel]
universal = 1
